syntax proto3;

package receipt;

import "points.proto";

// API Requests & Responses




// Data Modeling

// A Receipt contains details present on a provided receipt.
message Receipt {
     string retailer = 1;
     string purchaseDate = 2;
     string purchaseTime = 3;
     repeated Item items = 4;
     string total = 5;
}

// An Item is a purchase item present in a Receipt.
message Item {
    string shortDescription = 1;
    string price = 2;
}

